# lab-wizard

./: .gitignore  INSTRUMENT_API_STYLES.md  README.md  database_plan.md  pyproject.toml  setup.sh  zensical.toml
lab_wizard/: .gitignore  build_yaml.py  custom_setup.yaml  pyproject.toml
lab_wizard/config/savers/: database_saver_key_main_db.yml
lab_wizard/config/server/: server.yaml
lab_wizard/lib/client/: __init__.py  remote_exp.py  remote_resources.py  session.py
lab_wizard/lib/client/proxies/: __init__.py  base.py  registry.py  vsense.py  vsource.py
lab_wizard/lib/instruments/: andoAQ8201A.py  keysight53220A.py
lab_wizard/lib/instruments/andoAQ8201A/: andoAQ8201A.py  (+2 more)
lab_wizard/lib/plotters/: __init__.py  base.py  bokeh_plotter.py  mpl_plotter.py  plotter.py
lab_wizard/lib/savers/: __init__.py  base.py  database_saver.py  query.py  saver.py  schema.py
lab_wizard/lib/server/: __init__.py  _smoke_test.py  demo_client.py  permissions.py  registry.py  server.py  wire.py
lab_wizard/lib/task_adapters/: __init__.py  instrument_steps.py  plotters.py  savers.py
lab_wizard/lib/utilities/: IDN_searcher.py  config_io.py  flat_resource_io.py  model_tree.py  params_discovery.py
lab_wizard/wizard/: wizard.py
lab_wizard/wizard/backend/: _generation_common.py  attribute_name_autogen.py  custom_resource_generation.py  get_measurements.py  location.py  logging_config.py  main.py  models.py  permissions_api.py  project_generation.py  python_formatting.py  remote_servers.py  server_control.py  utils_runtime.py
lab_wizard/wizard/frontend/: package.json  vite.config.ts
procedure_framework/: pyproject.toml
procedure_framework/lab_procedure/: __init__.py  bus.py  context.py  core.py  messages.py  runner.py  steps.py
(+127 files in other folders)
