[project]
name = "lab-wizard"
version = "0.0.1"
description = "A framework for easy setup and control of laboratory experiments."
requires-python = ">=3.12"
dependencies = [
    "lab-procedure",
    "numpy",
    "matplotlib",
    "pyvisa",
    "pyserial",
    "h5py",
    "pyyaml",
    "pydantic>=2.11.7",
    "requests>=2.32.4",
    "pydantic-yaml",
    "ruamel-yaml>=0.18.14",
    "pytest>=8.4.1",
    "fastapi[standard]>=0.116.1",
    "pywebview[qt5]>=6.0 ; sys_platform == 'linux'",
    "pywebview[qt]>=6.0 ; sys_platform != 'linux'",
    "pyro5>=5.15",
    "dbay>=0.2.0",
    "pyvisa-py>=0.8.1",
    "sqlalchemy>=2.0",
    "pyleco>=0.6.0.post1",
    "coolname>=5.0.0",
    "black>=25.11.0",
]

[tool.uv.sources]
pydantic-yaml = { git = "https://github.com/sansseriff/pydantic-yaml", rev = "main" }

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["lab_wizard*"]

[tool.setuptools.package-data]
lab_wizard = [
    "wizard/backend/static/*",
    "wizard/backend/static/**/*",
]

[project.scripts]
wizard = "lab_wizard.wizard.cli:main"
lab_wizard_server = "lab_wizard.lib.server.server:main"
lab_wizard_client = "lab_wizard.lib.server.demo_client:main"



