[project]
name = "lab-procedure"
version = "0.0.1"
description = "Composable blocking procedure runner for laboratory measurements."
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["lab_procedure*"]
